Added missing minification file

--- a/packages/website/src/pages/docs/getting-started/installation.njk
+++ b/packages/website/src/pages/docs/getting-started/installation.njk
@@ -80,7 +80,11 @@ npm install @uiloos/angular
   defer>
 </script>
 
-<!-- Only if you are using Alpine.js you should load these  -->
+<!-- 
+  Only if you are using Alpine.js you should load 
+  these, and you should only load the use you will 
+  actually use!
+ -->
 <script
   src="https://unpkg.com/@uiloos/alpine@{VERSION}/dist/uiloos-alpine-active-list-{VERSION}.min" 
   defer>
@@ -95,6 +99,10 @@ npm install @uiloos/angular
 </script>
 <script
   src="https://unpkg.com/@uiloos/alpine@{VERSION}/dist/uiloos-alpine-typewriter-from-sentences-{VERSION}.min" 
+  defer>
+</script>
+<script
+  src="https://unpkg.com/@uiloos/alpine@{VERSION}/dist/uiloos-subscribe-{VERSION}.min" 
   defer>
 </script>
 {% endhighlight %}
