feature: `ActiveList` now knows which item was the last deactivated item
Tracked in three new variables:

A. lastDeactivated: which value was the last value to be deactivated.

B. lastDeactivatedContent: which ActiveListContent was the last to be
   deactivated.

C.lastDeactivatedIndex: the index which was last deactivated.

Also discovered a bug: `activateByPredicate` does specify how to handle
`maxActivationLimit` correctly. It is not specified what should happen
when there is a limit greater than 1, and what happens when the
predicate matches more items than the `maxActivationLimit`.

This is a specification failure, it will be fixed in the next commit.

--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -203,14 +203,27 @@ keywords: "ActiveList concept, ActiveList overview, ActiveList use-cases, auto p
       <span class="high">previous</span>. It also determines the
       <span class="high">direction</span> of the ActiveList.
     </li>
+     <li class="ml-8 mb-4">
+      <span class="high">lastDeactivatedContent</span> contains the last deactivated
+      ActiveListContent. Is <span class="high">null</span> if no item was
+      deactivated.
+    </li>
+    <li class="ml-8 mb-4">
+      <span class="high">lastDeactivated</span> contains the last deactivated value,
+      is basically the same a <span class="high">lastDeactivatedContent</span> but
+      unboxed. Is <span class="high">null</span> if no item was deactivated.
+    </li>
 
+    <li class="ml-8 mb-4">
+      <span class="high">lastDeactivatedIndex</span> the last index which was
+      deactivated. Is <span class="high">-1</span> if no item was deactivated.
+    </li>
     <li class="ml-8 mb-4">
       <span class="high">direction</span> is a string telling which 
       direction the ActiveList moved to on it last activation. See
       <a href="/docs/active-list/concepts/#direction" class="underline">Direction</a> 
       for more information.
     </li>
-
     <li class="ml-8 mb-4">
       <span class="high">autoPlay</span> whether or not the 
       AutoPlay is currently playing, and at what duration. See
