--- a/packages/website/src/pages/releases/core/core-releases.njk
+++ b/packages/website/src/pages/releases/core/core-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos core releases, core release hub"
 
   <ol>
     <li>
+      <a href="/releases/core/1.5.0/" class="font-mono">1.5.0 - TBA</a>
+    </li>
+    <li>
       <a href="/releases/core/1.4.0/" class="font-mono">1.4.0 - 2023-10-13</a>
     </li>
     <li>
