feat: added "unsubscribeAll" method to all components
Calling `unsubscribeAll` it will unsubscribe all subscribers from an
`Observable` component.

Behind the scenes it will simply empty / clear the `subscribers` array.

--- a/packages/website/src/pages/releases/core/1.5.0.njk
+++ b/packages/website/src/pages/releases/core/1.5.0.njk
@@ -68,6 +68,18 @@ keywords: "release notes @uiloos/core 1.5.0, changelog @uiloos/core 1.5.0"
           </ol>
         </p>
       </li>
+
+      <li>
+        <p>
+          All components now have an <a href="/api/core/activelist/#unsubscribeall" class="underline high">unsubscribeAll</a>
+          method which unsubscribes all subscribers at once.
+        </p>
+
+        <p>
+          This is most useful when using <span class="high">uiloos/core</span> directly:
+          it allows all the subscribers to be cleared when you know a component is no longer used.
+        </p>
+      </li>
     </ol>
   </article>
 
