feat: added opposite direction to ActiveList.
Also fixed a bug in the deactivation reset routine: whenever the
ActiveList is in a completely inactive state due to a deactivation,
the direction was reset to a hard-coded "right". Which is incorrect
because the directions are configured in the config. Now it is set
to whatever direction was configured for `next`.

Added tests to verify that the bug was fixed, improved the test for
a custom direction so it no longer uses a "call times check" but
actually checks the complete state.

--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -224,6 +224,10 @@ keywords: "ActiveList concept, ActiveList overview, ActiveList use-cases, auto p
       <a href="/docs/active-list/concepts/#direction" class="underline">Direction</a> 
       for more information.
     </li>
+     <li class="ml-8 mb-4">
+      <span class="high">oppositeDirection</span> is a string which 
+      always has opposite value of the current <span class="high">direction</span>.
+    </li>
     <li class="ml-8 mb-4">
       <span class="high">autoPlay</span> whether or not the 
       AutoPlay is currently playing, and at what duration. See
@@ -364,7 +368,7 @@ keywords: "ActiveList concept, ActiveList overview, ActiveList use-cases, auto p
 
   <p>
     If the ActiveList is <span class="high">circular</span>, and previous or
-    next tie, the direction will become <span class="high">next</span>
+    next tie, the direction will become <span class="high">next</span>.
   </p>
 
   <h2 id="cooldown" >
