website: added release notes for 1.5.0.

--- a/packages/website/src/pages/releases/alpine/alpine-releases.njk
+++ b/packages/website/src/pages/releases/alpine/alpine-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos alpine releases, alpine release hub"
 
   <ol>
     <li>
+      <a href="/releases/alpine/1.5.0/" class="font-mono">1.5.0 - 2023-11-10</a>
+    </li>
+    <li>
       <a href="/releases/alpine/1.4.0/" class="font-mono">1.4.0 - 2023-10-13</a>
     </li>
   </ol>
