--- a/packages/website/src/pages/releases/core/1.5.0.njk
+++ b/packages/website/src/pages/releases/core/1.5.0.njk
@@ -19,7 +19,7 @@ keywords: "release notes @uiloos/core 1.5.0, changelog @uiloos/core 1.5.0"
     >
       <path
         d="M.293 5.282L5 .5l1.414 1.436-3 3.048H12v2.032H3.414l3 3.048L5 11.5.293 6.718a1.027 1.027 0 010-1.436z"
-/>
+    />
     </svg>
     @uiloos/core releases
   </a>
@@ -27,7 +27,7 @@ keywords: "release notes @uiloos/core 1.5.0, changelog @uiloos/core 1.5.0"
   <!-- Title -->
   <h1>@uiloos/core 1.5.0</h1>
 
-  <p>Released on <span class="font-mono">TBA</span></p>
+  <p>Released on <span class="font-mono">2023-11-10</span></p>
 </section>
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 my-8">
