--- a/packages/website/src/pages/releases/svelte/svelte-releases.njk
+++ b/packages/website/src/pages/releases/svelte/svelte-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos svelte releases, svelte release hub"
 
   <ol>
     <li>
+      <a href="/releases/svelte/1.5.0/" class="font-mono">1.5.0 - 2023-11-10</a>
+    </li>
+    <li>
       <a href="/releases/svelte/1.4.0/" class="font-mono">1.4.0 - 2023-10-13</a>
     </li>
     <li>
