website: updated the tutorials.
Changes:

1. Updated the tutorials to use the new features from 1.5.0/

2. Added sections for readability of the code.

3. Links to complete code are removed in favor of links to the reference
   implementations.

4. Scrubbed out a couple of bugs in the code of the tutorials.

5. Added better links from one tutorial to the next if they are for the
   same component.

--- a/packages/website/src/pages/docs/typewriter/tutorials/multi-cursor.njk
+++ b/packages/website/src/pages/docs/typewriter/tutorials/multi-cursor.njk
@@ -552,8 +552,11 @@ function subscriber(typewriter) {
         Read through the API of the <a href="/api/core/typewriter/" class="underline high">Typewriter</a>.
       </li>
       <li class="ml-8 mb-4">
-        Take a look at some <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/typewriter-react-psp7gx" class="underline text-purple-600">React typewriter animations</a> and notice the lack of a subscriber callback, 
-        because React handles the DOM manipulation.
+       Only want one cursors see the <a href="/docs/typewriter/tutorials/single-cursor/" class="underline">tutorial for a single cursor animation</a> instead.
+      </li>
+      <li class="ml-8 mb-4">
+        When using vanilla JavaScript you must handle DOM manipulation yourself, 
+        contrast this with <a href="/docs/typewriter/examples/" class="underline">the examples that use a JavaScript framework</a>.
       </li>
     </ol>
   </section>
