--- a/packages/website/src/pages/docs/typewriter/tutorials/single-cursor.njk
+++ b/packages/website/src/pages/docs/typewriter/tutorials/single-cursor.njk
@@ -330,8 +330,8 @@ function subscriber(typewriter) {
         to check out a <a href="/docs/typewriter/tutorials/multi-cursor/" class="underline">tutorial for a multi cursor animation</a>.
       </li>
       <li class="ml-8 mb-4">
-        Take a look at some <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/typewriter-react-psp7gx" class="underline text-purple-600">React typewriter animations</a> and notice the lack of a subscriber callback, 
-        because React handles the DOM manipulation.
+        When using vanilla JavaScript you must handle DOM manipulation yourself, 
+        contrast this with <a href="/docs/typewriter/examples/" class="underline">the examples that use a JavaScript framework</a>.
       </li>
     </ol>
   </section>
